objects/Contact.object
<CustomObject>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New description here to add to SFDC.</description>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>